Finish Landing Page Project

--- a/index.html
+++ b/index.html
@@ -8,45 +8,66 @@
   </head>
   <body>
     <div class="header">
-      <div class="header-info">
-        <p>Header Logo</p>
-        <a href="/index.html">header link one</a>
-        <a href="/index.html">header link two</a>
-        <a href="/index.html">header link three</a>
+      <div class="header-links">
+        <div class="header-left">
+          <div>Header Logo</div>
+        </div>
+        <div class="header-right">
+          <a href="/index.html">header link one</a>
+          <a href="/index.html">header link two</a>
+          <a href="/index.html">header link three</a>
+        </div>
       </div>
       <div class="website-info">
-        <h1>This website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-        <button>Sign up</button>
-        <img src="/images/nathan-gordon-7xv8isawqCg-unsplash.jpg" title="Placeholder Image" alt="Placeholder Image" width="400px" />
+        <div class="website-left">
+          <h1>This website is awesome</h1>
+          <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+          <button>Sign up</button>
+        </div>
+        <div class="website-right">
+          <img src="/images/nathan-gordon-7xv8isawqCg-unsplash.jpg" title="Placeholder Image" alt="Placeholder Image" width="400px" />
+        </div>
       </div>
     </div>
+
     <div class="main">
-      <div class="main-info">
-        <h1>Some random information.</h1>
-      </div>
+      <div class="main-info">Some random information.</div>
+
       <div class="subtext">
-        <img src="/images/580b585b2edbce24c47b26bd.png" alt="Some Autumn Leaf" width="150px" />
-        <p>this is some subtext under an illustration or image</p>
-        <img src="/images/580b585b2edbce24c47b26c3.png" alt="Some Autumn Leaf" width="150px" />
-        <p>this is some subtext under an illustration or image</p>
-        <img src="/images/580b585b2edbce24c47b26ca.png" alt="Some Autumn Leaf" width="150px" />
-        <p>this is some subtext under an illustration or image</p>
-        <img src="/images/580b585b2edbce24c47b26d6.png" alt="Some Autumn Leaf" width="150px" />
-        <p>this is some subtext under an illustration or image</p>
+        <div class="subtext-item">
+          <img src="/images/580b585b2edbce24c47b26bd.png" alt="Some Autumn Leaf" width="150px" />
+          <div>this is some subtext under an illustration or image</div>
+        </div>
+        <div class="subtext-item">
+          <img src="/images/580b585b2edbce24c47b26c3.png" alt="Some Autumn Leaf" width="150px" />
+          <div>this is some subtext under an illustration or image</div>
+        </div>
+        <div class="subtext-item">
+          <img src="/images/580b585b2edbce24c47b26ca.png" alt="Some Autumn Leaf" width="150px" />
+          <div>this is some subtext under an illustration or image</div>
+        </div>
+        <div class="subtext-item">
+          <img src="/images/580b585b2edbce24c47b26d6.png" alt="Some Autumn Leaf" width="150px" />
+          <div>this is some subtext under an illustration or image</div>
+        </div>
       </div>
     </div>
+
     <div class="quote">
-      <i>“You have brains in your head. You have feet in your shoes. You can steer yourself any direction you choose. You're on your own. And you know what you know. And you are the guy who'll decide where to go."</i>
-      <p><b>- Dr. Seuss</b></p>
+      <div class="quote-text">“You have brains in your head. You have feet in your shoes. You can steer yourself any direction you choose. You're on your own. And you know what you know. And you are the guy who'll decide where to go."</div>
+      <div class="quote-author"><b>- Dr. Seuss</b></div>
     </div>
+
     <div class="sign-up">
-      <h4>Call to action! It's time!</h4>
-      <p>Sign up for our product by clicking that button right over there!</p>
-      <button>Sign up</button>
+      <div class="sign-up-call">
+        <div class="call">Call to action! It's time!</div>
+        <div class="call-text">Sign up for our product by clicking that button right over there!</div>
+      </div>
+      <div class="sign-up-button"><button>Sign up</button></div>
     </div>
+
     <div class="footer">
-      <p>Copyright &copy; The Odin Project</p>
+      <p>Copyright &copy; The Odin Project 2025</p>
     </div>
   </body>
 </html>
